Add dummy for covid-lockdown.

--- a/rm_project.ipynb
+++ b/rm_project.ipynb
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -650,6 +650,53 @@
     "df = pd.merge(df_combined5, filtered_data_urb_long, on=['Country', 'Year'], how='inner')\n",
     "\n",
     "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are now introducing a dummy variable that takes the value 1 in 2020, when there was a lockdown, which may affect the amount of waste."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Country  Year  COVID  Policy\n",
+      "108      Belgium  2020      1       1\n",
+      "109      Denmark  2020      1       1\n",
+      "110      Germany  2020      1       1\n",
+      "111      Estonia  2020      1       1\n",
+      "112        Spain  2020      1       1\n",
+      "113       France  2020      1       1\n",
+      "114        Italy  2020      1       1\n",
+      "115       Latvia  2020      1       1\n",
+      "116    Lithuania  2020      1       1\n",
+      "117   Luxembourg  2020      1       0\n",
+      "118        Malta  2020      1       1\n",
+      "119  Netherlands  2020      1       1\n",
+      "120      Austria  2020      1       1\n",
+      "121       Poland  2020      1       1\n",
+      "122     Portugal  2020      1       0\n",
+      "123     Slovenia  2020      1       0\n",
+      "124      Finland  2020      1       0\n",
+      "125       Sweden  2020      1       0\n",
+      "126      Belgium  2021      0       1\n",
+      "127      Denmark  2021      0       1\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['COVID'] = np.where(df['Year'] == 2020, 1, 0)\n",
+    "\n",
+    "filtered_df = df[(df['Year'] == 2020) | (df['Year'] == 2021)][['Country', 'Year', 'COVID', 'Policy']]\n",
+    "print(filtered_df.head(20))\n"
    ]
   }
  ],
