--- a/rm_project.ipynb
+++ b/rm_project.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier, GradientBoostingRegressor, GradientBoostingClassifier\n",
     "from sklearn.tree import DecisionTreeRegressor, DecisionTreeClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression, LassoCV\n",
+    "from sklearn.linear_model import LogisticRegression, LassoCV, LinearRegression, Lasso\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from doubleml import DoubleMLData, DoubleMLPLR\n",
     "from sklearn.model_selection import KFold\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "<Axes: xlabel='Year'>"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "<Axes: xlabel='Year'>"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "261  Austria  2022          803.0"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 397,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
        "<Axes: xlabel='Year'>"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 398,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
        "179        17600   58.219  "
       ]
      },
-     "execution_count": 297,
+     "execution_count": 409,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
@@ -1572,7 +1572,7 @@
        "[194 rows x 9 columns]"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 415,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1624,12 +1624,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "I will start with standard OLS regressions to first investigate whether a country's group affiliation affects waste generation overall. Then, I will analyze the impact of each covariate on waste per capita by running separate regressions for each group."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
@@ -1641,8 +1642,8 @@
       "Dep. Variable:          waste_per_cap   R-squared:                       0.021\n",
       "Model:                            OLS   Adj. R-squared:                  0.016\n",
       "Method:                 Least Squares   F-statistic:                     4.173\n",
-      "Date:                Thu, 20 Feb 2025   Prob (F-statistic):             0.0424\n",
-      "Time:                        20:43:36   Log-Likelihood:                -1225.0\n",
+      "Date:                Tue, 25 Feb 2025   Prob (F-statistic):             0.0424\n",
+      "Time:                        13:57:33   Log-Likelihood:                -1225.0\n",
       "No. Observations:                 194   AIC:                             2454.\n",
       "Df Residuals:                     192   BIC:                             2461.\n",
       "Df Model:                           1                                         \n",
@@ -1688,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [
     {
@@ -1700,8 +1701,8 @@
       "Dep. Variable:          waste_per_cap   R-squared:                       0.740\n",
       "Model:                            OLS   Adj. R-squared:                  0.725\n",
       "Method:                 Least Squares   F-statistic:                     49.08\n",
-      "Date:                Thu, 20 Feb 2025   Prob (F-statistic):           1.75e-19\n",
-      "Time:                        20:43:36   Log-Likelihood:                -432.83\n",
+      "Date:                Tue, 25 Feb 2025   Prob (F-statistic):           1.75e-19\n",
+      "Time:                        13:57:33   Log-Likelihood:                -432.83\n",
       "No. Observations:                  74   AIC:                             875.7\n",
       "Df Residuals:                      69   BIC:                             887.2\n",
       "Df Model:                           4                                         \n",
@@ -1766,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [
     {
@@ -1778,8 +1779,8 @@
       "Dep. Variable:          waste_per_cap   R-squared:                       0.403\n",
       "Model:                            OLS   Adj. R-squared:                  0.383\n",
       "Method:                 Least Squares   F-statistic:                     19.44\n",
-      "Date:                Thu, 20 Feb 2025   Prob (F-statistic):           3.04e-12\n",
-      "Time:                        20:43:36   Log-Likelihood:                -703.73\n",
+      "Date:                Tue, 25 Feb 2025   Prob (F-statistic):           3.04e-12\n",
+      "Time:                        13:57:33   Log-Likelihood:                -703.73\n",
       "No. Observations:                 120   AIC:                             1417.\n",
       "Df Residuals:                     115   BIC:                             1431.\n",
       "Df Model:                           4                                         \n",
@@ -1836,7 +1837,7 @@
     "Key Insights:\n",
     "Higher real expenditure per capita leads to more waste, while higher unemployment rates may reduce waste levels for this Group, possibly due to lower consumption.\n",
     "Environmental policies (taxes) and Urbanization does not show a strong impact.   \n",
-    "Also such pack of factors explain only 38% of regression, which may means that in countries with Policy there are a lot of additional rules, requerements to how this type of policy must be held."
+    "Also, such pack of factors explain only 38% of regression, which may mean that in countries with Policy there are a lot of additional rules, requerements on how this type of policy must be held."
    ]
   },
   {
@@ -1869,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [
     {
@@ -1943,8 +1944,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two cells below provide estimation using \"LASSO\" and \"XGBoost\" methods."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
@@ -1964,69 +1972,42 @@
       "Score function: ATE\n",
       "\n",
       "------------------ Machine learner   ------------------\n",
-      "Learner ml_g: Pipeline(steps=[('standardscaler', StandardScaler()),\n",
-      "                ('lassocv', LassoCV(cv=5, max_iter=5000))])\n",
-      "Learner ml_m: Pipeline(steps=[('standardscaler', StandardScaler()),\n",
-      "                ('logisticregressioncv',\n",
-      "                 LogisticRegressionCV(Cs=array([1.00000000e-07, 1.38949549e-07, 1.93069773e-07, 2.68269580e-07,\n",
-      "       3.72759372e-07, 5.17947468e-07, 7.19685673e-07, 1.00000000e-06,\n",
-      "       1.38949549e-06, 1.93069773e-06, 2.68269580e-06, 3.72759372e-06,\n",
-      "       5.17947468e-06, 7.19685673e-06, 1.00000000e-05, 1.38949549e-05,\n",
-      "       1.9...\n",
-      "       1.00000000e-03, 1.38949549e-03, 1.93069773e-03, 2.68269580e-03,\n",
-      "       3.72759372e-03, 5.17947468e-03, 7.19685673e-03, 1.00000000e-02,\n",
-      "       1.38949549e-02, 1.93069773e-02, 2.68269580e-02, 3.72759372e-02,\n",
-      "       5.17947468e-02, 7.19685673e-02, 1.00000000e-01, 1.38949549e-01,\n",
-      "       1.93069773e-01, 2.68269580e-01, 3.72759372e-01, 5.17947468e-01,\n",
-      "       7.19685673e-01, 1.00000000e+00]),\n",
-      "                                      cv=5, max_iter=1000, penalty='l1',\n",
-      "                                      solver='liblinear'))])\n",
+      "Learner ml_g: Lasso()\n",
+      "Learner ml_m: LogisticRegression()\n",
       "Out-of-sample Performance:\n",
       "Regression:\n",
-      "Learner ml_g0 RMSE: [[99.35768954]]\n",
-      "Learner ml_g1 RMSE: [[89.73723803]]\n",
+      "Learner ml_g0 RMSE: [[90.46160743]]\n",
+      "Learner ml_g1 RMSE: [[89.62558421]]\n",
       "Classification:\n",
-      "Learner ml_m Log Loss: [[0.61993945]]\n",
+      "Learner ml_m Log Loss: [[0.62564855]]\n",
       "\n",
       "------------------ Resampling        ------------------\n",
-      "No. folds: 3\n",
+      "No. folds: 5\n",
       "No. repeated sample splits: 1\n",
       "\n",
       "------------------ Fit summary       ------------------\n",
-      "            coef    std err         t     P>|t|     2.5 %     97.5 %\n",
-      "Group  23.050434  14.572805  1.581743  0.113708 -5.511738  51.612606\n",
-      "            coef    std err         t     P>|t|     2.5 %     97.5 %\n",
-      "Group  23.050525  14.572627  1.581769  0.113702 -5.511298  51.612349\n"
+      "           coef    std err         t     P>|t|      2.5 %     97.5 %\n",
+      "Group  10.59888  14.027158  0.755597  0.449891 -16.893845  38.091605\n"
      ]
     }
    ],
    "source": [
     "# Lasso\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.linear_model import LassoCV, LogisticRegressionCV\n",
-    "Cs = 0.01*np.logspace(-5, 2, 50)\n",
-    "lasso = make_pipeline(StandardScaler(), LassoCV(cv=5, max_iter=5000))\n",
-    "lasso_class = make_pipeline(StandardScaler(),\n",
-    "                            LogisticRegressionCV(cv=5, penalty='l1', solver='liblinear',\n",
-    "                                                 Cs = Cs, max_iter=1000))\n",
+    "lasso =  Lasso()\n",
+    "lasso_class = LogisticRegression()\n",
     "\n",
     "# Initialize DoubleMLIRM model\n",
     "np.random.seed(123)\n",
     "dml_irm_lasso = dml.DoubleMLIRM(obj_dml_data,\n",
     "                          ml_g=lasso,\n",
     "                          ml_m=lasso_class,\n",
-    "                          trimming_threshold = 0.01,\n",
-    "                          n_folds = 3)\n",
-    "dml_irm_lasso.fit(store_predictions=True)\n",
-    "lasso_summary = dml_irm_lasso.summary\n",
-    "\n",
-    "print(dml_irm_lasso.fit())\n",
-    "print(lasso_summary)"
+    "                          )\n",
+    "print(dml_irm_lasso.fit())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -2041,7 +2022,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Anna\\anaconda3\\envs\\res\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [20:43:43] WARNING: D:\\bld\\xgboost-split_1738880195977\\work\\src\\learner.cc:740: \n",
+      "c:\\Users\\Anna\\anaconda3\\envs\\res\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [13:57:34] WARNING: D:\\bld\\xgboost-split_1738880195977\\work\\src\\learner.cc:740: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -2076,12 +2057,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Correction for Panel Data"
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Both vanilla ML approach (linear regression) and DML find that the countries who adopted Policy produce more municipal waste per capita than the countries who did not. The finding is statistically significant at the 5% level.\n",
+    "\n",
+    "- ML approach comes up with approximately 8% increase of the waste level above the base line in the countries who adopted policy (40.6 kg per capita).\n",
+    "\n",
+    "- DML model (with use of Random Forest) estimates this increase being at approx. 5% of the waste level (25.3 kg per capita) thus correcting the bias of the vanilla approach.\n",
+    "\n",
+    "- Not all machine learning methods may be suitable for analyzing imperfect datasets using DML, as in our case, only Random Forest produced good results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Correction for Panel Data\n",
+    "#### Additional part (draft, reference: https://arxiv.org/html/2409.01266v1#S3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2091,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
@@ -2294,7 +2296,7 @@
        "[196 rows x 9 columns]"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 424,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2313,7 +2315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [
     {
@@ -2529,7 +2531,7 @@
        "[194 rows x 9 columns]"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 425,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2558,7 +2560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
@@ -2612,26 +2614,6 @@
     "dml_plr_obj = dml.DoubleMLIRM(obj_dml_data, ml_g, ml_m, n_folds = 5)\n",
     "\n",
     "print(dml_plr_obj.fit())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Both vanilla ML approach (linear regression) and DML find that the countries who adopted Policy produce more municipal waste per capita than the countries who did not. The finding is statistically significant at the 5% level.\n",
-    "\n",
-    "- ML approach comes up with approximately 8% increase of the waste level above the base line in the countries who adopted policy (40.6 kg per capita).\n",
-    "\n",
-    "- DML model (with use of Random Forest) estimates this increase being at approx. 5% of the waste level (25.3 kg per capita) thus correcting the bias of the vanilla approach.\n",
-    "\n",
-    "- Not all machine learning methods may be suitable for analyzing imperfect datasets using DML, as in our case, only Random Forest produced good results."
    ]
   }
  ],
